Add missing metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1189,6 +1189,8 @@ Format=FormatPercentScore
 PercentDecimalPlaces=2
 PercentTotalSize=5
 
+RemainderFormat=
+
 PercentP3X=0
 PercentP3Y=0
 PercentP3OnCommand=shadowlength,0;diffuse,PlayerColor(PLAYER_1)
