let's put default in the default modifiers and see if that fixes a crash

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -27,7 +27,7 @@ ScreenHeight=480
 AutoSetStyle=false
 
 # Default modifiers and noteskin.
-DefaultModifiers="1x"
+DefaultModifiers="1x;default"
 DefaultNoteSkinName="default"
 
 # Difficulties to show. Useful for custom games where you want to hide these.
