--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -633,6 +633,8 @@ Format=FormatPercentScore
 PercentUseRemainder=false
 ApplyScoreDisplayOptions=true
 DancePointsDigits=5
+
+RemainderFormat=
 #
 PercentFormat="%2d"
 PercentP1X=0
@@ -2040,6 +2042,7 @@ PrevScreen=Branch.BackOutOfStageInformation()
 PrepareScreen="ScreenGameplay"
 #
 ForceTimer=true
+TimerStealth=true
 TimerMetricsGroup="MenuTimerNoSound"
 WaitForChildrenBeforeTweeningOut=true
 TimerSeconds=1
