Don't show protiming, song title on demo.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1347,7 +1347,7 @@ SongMeterDisplayY=SCREEN_TOP+50
 SongMeterDisplayOnCommand=draworder,50;zoom,0;y,SCREEN_TOP-24;sleep,1.5;decelerate,0.5;zoom,1;y,SCREEN_TOP+50
 SongMeterDisplayOffCommand=
 #
-ShowSongTitle=true
+ShowSongTitle=not GAMESTATE:IsDemonstration();
 SongTitleX=SCREEN_CENTER_X
 SongTitleY=SCREEN_TOP+50
 SongTitleOnCommand=draworder,55;shadowlength,1;basezoom,0.5;zoomy,0;sleep,1.5+0.5;smooth,0.5;zoom,1;y,SCREEN_TOP+50
