remove old life meter graphic, nuke timer frame (it was ugly)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4226,6 +4226,7 @@ PrevScreen="ScreenLogo"
 NextScreen="ScreenDemonstration"
 StartScreen=Branch.TitleMenu()
 TimerSeconds=25
+TimerStealth=true
 SecondsToShow=25
 ForceTimer=true
 ResetGameState=false
