make course use songs we have, add back experimental customdifficulties;

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -467,8 +467,80 @@ SortLevel5Color=color("0,1,0,1")
 # Custom system that lets you rename certain classes of difficulties to 
 # something else. Mostly for custom games and game emulation, PIU for example.
 
-Names=
-
+Names="PumpHard,PumpFreestyle,PumpNightmare"
+#~ Names="PumpHard,PumpFreestyle,PumpNightmare,PumpHalfDoubleEasy,PumpHalfDoubleMedium,PumpHalfDoubleHard,PumpHalfDoubleExpert"
+# Dance Couple Beginner
+DanceCoupleBeginnerStepsType="StepsType_Dance_Couple"
+DanceCoupleBeginnerDifficulty="Difficulty_Beginner"
+DanceCoupleBeginnerCourseType=nil
+DanceCoupleBeginnerString="Beginner"
+# Dance Couple Easy
+DanceCoupleEasyStepsType="StepsType_Dance_Couple"
+DanceCoupleEasyDifficulty="Difficulty_Easy"
+DanceCoupleEasyCourseType=nil
+DanceCoupleEasyString="Easy"
+# Dance Couple Medium
+DanceCoupleMediumStepsType="StepsType_Dance_Couple"
+DanceCoupleMediumDifficulty="Difficulty_Medium"
+DanceCoupleMediumCourseType=nil
+DanceCoupleMediumString="Medium"
+# Dance Couple Hard
+DanceCoupleHardStepsType="StepsType_Dance_Couple"
+DanceCoupleHardDifficulty="Difficulty_Hard"
+DanceCoupleHardCourseType=nil
+DanceCoupleHardString="Hard"
+# Dance Couple Expert
+DanceCoupleExpertStepsType="StepsType_Dance_Couple"
+DanceCoupleExpertDifficulty="Difficulty_Expert"
+DanceCoupleExpertCourseType=nil
+DanceCoupleExpertString="Expert"
+# Pump Single Hard (Crazy)
+PumpHardStepsType="StepsType_Pump_Single"
+PumpHardDifficulty="Difficulty_Hard"
+PumpHardCourseType=nil
+PumpHardString="Crazy"
+# Pump Double Medium (Freestyle)
+PumpFreestyleStepsType="StepsType_Pump_Double"
+PumpFreestyleDifficulty="Difficulty_Medium"
+PumpFreestyleCourseType=nil
+PumpFreestyleString="Freestyle"
+# Pump Double Hard (Nightmare)
+PumpNightmareStepsType="StepsType_Pump_Double"
+PumpNightmareDifficulty="Difficulty_Hard"
+PumpNightmareCourseType=nil
+PumpNightmareString="Nightmare"
+# Pump Half-Double Easy
+PumpHalfDoubleEasyStepsType="StepsType_Pump_Halfdouble"
+PumpHalfDoubleEasyDifficulty="Difficulty_Easy"
+PumpHalfDoubleEasyCourseType=nil
+PumpHalfDoubleEasyString="HalfDoubleEasy"
+# Pump Half-Double Medium
+PumpHalfDoubleMediumStepsType="StepsType_Pump_Halfdouble"
+PumpHalfDoubleMediumDifficulty="Difficulty_Medium"
+PumpHalfDoubleMediumCourseType=nil
+PumpHalfDoubleMediumString="HalfDoubleMedium"
+# Pump Half-Double Hard
+PumpHalfDoubleHardStepsType="StepsType_Pump_Halfdouble"
+PumpHalfDoubleHardDifficulty="Difficulty_Hard"
+PumpHalfDoubleHardCourseType=nil
+PumpHalfDoubleHardString="HalfDoubleHard"
+# Pump Half-Double Expert
+PumpHalfDoubleExpertStepsType="StepsType_Pump_Halfdouble"
+PumpHalfDoubleExpertDifficulty="Difficulty_Expert"
+PumpHalfDoubleExpertCourseType=nil
+PumpHalfDoubleExpertString="HalfDoubleExpert"
+#
+# Difficulty_Beginner-StepsType_Pump_Single=Easy
+# Difficulty_Easy-StepsType_Pump_Single=Normal
+# Difficulty_Medium-StepsType_Pump_Single=Hard
+# Difficulty_Hard-StepsType_Pump_Single=Crazy
+# Difficulty_Medium-StepsType_Pump_Halfdouble=Half-Double
+# Difficulty_Medium-StepsType_Pump_Double=Freestyle
+# Difficulty_Hard-StepsType_Pump_Double=Nightmare
+# Difficulty_Edit-StepsType_Pump_Single=Edit
+# Difficulty_Edit-StepsType_Pump_Halfdouble=Edit
+# Difficulty_Edit-StepsType_Pump_Double=Edit
+# Course=Progressive
 [DifficultyList]
 # A list that shows difficulties in a song.
 CapitalizeDifficultyNames=false
