remove options density, add back Big, change Jupiter, add less obnoxious editor sounds

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2267,14 +2267,14 @@ Effect,13="mod,bumpy;name,Bumpy"
 Effect,14="mod,beat;name,Beat"
 Effect,15="mod,45% xmode;name,XMode"
 
-EffectsReceptor="5;selectmultiple"
+EffectsReceptor="6;selectmultiple"
 EffectsReceptorDefault="mod,no confusion,no invert,no flip,no mini,no xmode"
 EffectsReceptor,1="mod,confusion;name,Confusion"
 EffectsReceptor,2="mod,invert;name,Invert"
 EffectsReceptor,3="mod,Flip;name,Flip"
 EffectsReceptor,4="mod,mini;name,Mini"
-# EffectsReceptor,5="mod,-100% mini;name,Big"
-EffectsReceptor,5="mod,45% xmode;name,XMode"
+EffectsReceptor,5="mod,-35% mini;name,Big"
+EffectsReceptor,6="mod,45% xmode;name,XMode"
 
 EffectsArrow="8;selectmultiple"
 EffectsArrowDefault="mod,no drunk,no dizzy,no twirl,no roll,no beat,no tipsy,no tornado,no bumpy"
