--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1308,7 +1308,7 @@ LineFancyUIBG="lua,ThemePrefRow('FancyUIBG')"
 [ScreenReloadSongs]
 
 [ScreenPlayerOptions]
-LineNames=GetDefaultOptionLines()
+LineNames="1,8,14,2,3A,3B,4,5,6,R,7,9,10,11,12,13,16,SF,17"
 LineSF="lua,OptionRowScreenFilter()"
 Line17="lua,OptionRowProTiming()"
 Line18="list,Characters"
