add bad screenselectcharacter metrics back so it does something

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1850,17 +1850,50 @@ ChoiceOni="applydefaultoptions;name,Oni;text,Oni;playmode,oni;screen,ScreenSelec
 ChoiceEndless="applydefaultoptions;name,Endless;text,Endless;playmode,endless;screen,ScreenSelectCourse;setenv,sMode,Endless"
 
 [ScreenSelectCharacter]
-Class="ScreenSelectMaster"
-Fallback="ScreenSelectMaster"
-NextScreen=Branch.GetGameInformationScreen
-PrevScreen=Branch.TitleMenu()
-#
-PerChoiceScrollElement=false
-PerChoiceIconElement=false
-#
-ShowScroller=true
-WrapScroller=true
-ShowIcon=false
+Class="ScreenSelectCharacter"
+Fallback="ScreenWithMenuElements"
+WaitForChildrenBeforeTweeningOut=true
+TitleP1OnCommand=x,140;y,80;addx,-SCREEN_WIDTH*0.6;bounceend,0.5;addx,SCREEN_WIDTH*0.6
+TitleP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-SCREEN_WIDTH*0.6
+TitleP2OnCommand=x,500;y,80;addx,SCREEN_WIDTH*0.6;bounceend,0.5;addx,-SCREEN_WIDTH*0.6
+TitleP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,SCREEN_WIDTH*0.6
+CardP1OnCommand=x,140;y,180;addx,-SCREEN_WIDTH*0.6;bounceend,0.5;addx,SCREEN_WIDTH*0.6
+CardP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-SCREEN_WIDTH*0.6
+CardP2OnCommand=x,500;y,180;addx,SCREEN_WIDTH*0.6;bounceend,0.5;addx,-SCREEN_WIDTH*0.6
+CardP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,SCREEN_WIDTH*0.6
+CardArrowsP1OnCommand=x,140;y,180;diffusealpha,0;linear,0.3;diffusealpha,1
+CardArrowsP1OffCommand=linear,0.3;diffusealpha,0
+CardArrowsP2OnCommand=x,500;y,180;diffusealpha,0;linear,0.3;diffusealpha,1
+CardArrowsP2OffCommand=linear,0.3;diffusealpha,0
+ExplanationOnCommand=x,SCREEN_CENTER_X;y,140;diffusealpha,0;linear,0.3;diffusealpha,1
+ExplanationOffCommand=linear,0.3;diffusealpha,0
+AttackFrameP1OnCommand=x,140;y,380;addx,-SCREEN_WIDTH*0.6;bounceend,0.5;addx,SCREEN_WIDTH*0.6
+AttackFrameP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-SCREEN_WIDTH*0.6
+AttackFrameP2OnCommand=x,500;y,380;addx,SCREEN_WIDTH*0.6;bounceend,0.5;addx,-SCREEN_WIDTH*0.6
+AttackFrameP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,SCREEN_WIDTH*0.6
+AttackIconWidth=40
+AttackIconHeight=40
+AttackIconsP1StartX=SCREEN_CENTER_X-192
+AttackIconsP1StartY=SCREEN_CENTER_Y+116
+AttackIconsP2StartX=SCREEN_CENTER_X+168
+AttackIconsP2StartY=SCREEN_CENTER_Y+116
+AttackIconsSpacingX=42
+AttackIconsSpacingY=32
+AttackIconsP1OnCommand=addx,-SCREEN_WIDTH*0.6;bounceend,0.5;addx,SCREEN_WIDTH*0.6
+AttackIconsP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-SCREEN_WIDTH*0.6
+AttackIconsP2OnCommand=addx,SCREEN_WIDTH*0.6;bounceend,0.5;addx,-SCREEN_WIDTH*0.6
+AttackIconsP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,SCREEN_WIDTH*0.6
+IconWidth=40
+IconHeight=40
+IconsP1OnCommand=addx,-SCREEN_WIDTH*0.6;bounceend,0.5;addx,SCREEN_WIDTH*0.6
+IconsP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-SCREEN_WIDTH*0.6
+IconsP2OnCommand=addx,SCREEN_WIDTH*0.6;bounceend,0.5;addx,-SCREEN_WIDTH*0.6
+IconsP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,SCREEN_WIDTH*0.6
+SleepAfterTweenOffSeconds=0.8
+TimerSeconds=40
+ShowStyleIcon=true
+PrevScreen=ScreenTitleBranch()
+NextScreen=SongSelectionScreen()
 
 [ScreenGameInformation]
 Class="ScreenSelectMaster"
