Extended -> Nonstop (internally), get rid of segment display "fade" effect, etc.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1904,7 +1904,7 @@ PrevScreen=Branch.TitleMenu()
 TimerSeconds=30
 #
 DefaultChoice="Normal"
-ChoiceNames="Normal,Rave,Extended,Oni,Endless"
+ChoiceNames="Normal,Rave,Nonstop,Oni,Endless"
 #
 PerChoiceScrollElement=false
 PerChoiceIconElement=false
@@ -1917,7 +1917,7 @@ ChoiceEasy="applydefaultoptions;name,Easy;text,Easy;playmode,regular;difficulty,
 ChoiceNormal="applydefaultoptions;name,Normal;text,Normal;playmode,regular;difficulty,easy;screen,ScreenSelectMusic;setenv,sMode,Normal"
 ChoiceHard="applydefaultoptions;name,Hard;text,Hard;playmode,regular;difficulty,hard;screen,ScreenSelectMusic;setenv,sMode,Normal"
 ChoiceRave="applydefaultoptions;name,Rave;text,Rave;playmode,rave;screen,ScreenSelectMusic;setenv,sMode,Rave"
-ChoiceExtended="applydefaultoptions;name,Extended;text,Extended;playmode,nonstop;screen,ScreenSelectCourse;setenv,sMode,Extended"
+ChoiceNonstop="applydefaultoptions;name,Nonstop;text,Extended;playmode,nonstop;screen,ScreenSelectCourse;setenv,sMode,Nonstop"
 ChoiceOni="applydefaultoptions;name,Oni;text,Oni;playmode,oni;screen,ScreenSelectCourse;setenv,sMode,Oni"
 ChoiceEndless="applydefaultoptions;name,Endless;text,Endless;playmode,endless;screen,ScreenSelectCourse;setenv,sMode,Endless"
 
