Make ScreenMapControllers obey lockinput

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2744,7 +2744,7 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 HelpText=Screen.String("HelpTextMapControllers")
 #
-ScreenOnCommand=%function(self) MESSAGEMAN:Broadcast("KeyConfigRequestStall"); end;
+ScreenOnCommand=%function(self) MESSAGEMAN:Broadcast("KeyConfigRequestStall"); self:lockinput(5); end;
 #
 DevicesX=SCREEN_CENTER_X
 DevicesY=SCREEN_TOP+24
