fix max hold life

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1148,7 +1148,7 @@ ImmediateHoldLetGo=not IsGame("pump")
 RequireStepOnHoldHeads=not IsGame("pump")
 RequireStepOnMines=false
 InitialHoldLife=IsGame("pump") and 0.05 or 1
-MaxHoldLife=IsGame("pump") and 0.05 or 1
+MaxHoldLife=1
 RollBodyIncrementsCombo=GetGamePrefB("UserPrefComboOnRolls")
 ScoreMissedHoldsAndRolls=not IsGame("pump")
 PercentUntilColorCombo=0.25
