Add the NumIconsToShow metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1447,6 +1447,7 @@ AfterSetCommand=%TextBannerAfterSet
 [WheelNotifyIcon]
 ShowTraining=false
 BlinkPlayersBest=true
+NumIconsToShow=2
 
 # 04 #
 
