--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1149,7 +1149,7 @@ RequireStepOnHoldHeads=not IsGame("pump")
 RequireStepOnMines=false
 InitialHoldLife=IsGame("pump") and 0.05 or 1
 MaxHoldLife=1
-RollBodyIncrementsCombo=GetGamePrefB("UserPrefComboOnRolls")
+RollBodyIncrementsCombo=false
 ScoreMissedHoldsAndRolls=not IsGame("pump")
 PercentUntilColorCombo=0.25
 ComboStoppedAt=50
