--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -309,6 +309,8 @@ ShowBoard=GAMESTATE:GetCurrentGame():GetName() == "kb7"
 ReceptorArrowsYStandard=GetTapPosition('Standard')
 ReceptorArrowsYReverse=GetTapPosition('Reverse')
 ComboUnderField=ComboUnderField()
+# todo: themeprefs me
+RollBodyIncrementsCombo=GetGamePrefB("UserPrefComboOnRolls")
 
 [PlayerOptions]
 
