and there's the fix

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -309,8 +309,7 @@ ShowBoard=GAMESTATE:GetCurrentGame():GetName() == "kb7"
 ReceptorArrowsYStandard=GetTapPosition('Standard')
 ReceptorArrowsYReverse=GetTapPosition('Reverse')
 ComboUnderField=ComboUnderField()
-# todo: themeprefs me
-RollBodyIncrementsCombo=GetGamePrefB("UserPrefComboOnRolls")
+RollBodyIncrementsCombo=ThemePrefs.Get("ComboOnRolls")
 
 [PlayerOptions]
 
