--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -27,7 +27,7 @@ ScreenHeight=480
 AutoSetStyle=false
 
 # Default modifiers and noteskin.
-DefaultModifiers="1x;default"
+DefaultModifiers="1x"
 DefaultNoteSkinName="default"
 
 # Difficulties to show. Useful for custom games where you want to hide these.
