[ScreenOptionsMaster] Added StepsRowLayoutType metric. (Valid values are ShowAllInRow or ShowOneInRow.)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2239,6 +2239,7 @@ Class="ScreenOptionsMaster"
 
 NoteSkinSortOrder=""
 StepsUseChartName=false
+StepsRowLayoutType="ShowAllInRow"
 
 # ExitItem is an exit row with the "Exit" text as a menu item; ExitTitle
 # uses the menu title.
