[editorKeysounds] Prepare the eventual menu.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3896,6 +3896,10 @@ ColorDisabled=color("1,1,1,1")
 RowInitCommand=halign,0.5;valign,0.5;zoom,0.8;x,75;y,45;shadowlength,1
 OptionRowNormalMetricsGroup="OptionRowMiniMenuEditHelp"
 
+[ScreenMiniMenuKeysoundTrack]
+Fallback="ScreenMiniMenu"
+ShowFooter=false
+
 [OptionRowMiniMenuEditHelp]
 # Help menu ( Keys & Stuff )
 Fallback="OptionRowMiniMenu"
