and now for the rest of the work on the new combo/miss labels.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -68,7 +68,9 @@ LabelMaxZoom=0.875*1
 PulseCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.125*param.Zoom); self:linear(0.05); self:zoom(param.Zoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
 PulseLabelCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.075*param.LabelZoom); self:linear(0.05); self:zoom(param.LabelZoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
 NumberOnCommand=y,240-216-1.5;shadowlength,1;horizalign,right;vertalign,bottom;skewx,-0.125;
-LabelOnCommand=x,6;y,22.5;shadowlength,1;zoom,0.75;diffusebottomedge,color("0.75,0.75,0.75,1");horizalign,left;vertalign,bottom
+
+ComboLabelOnCommand=x,0;y,23;shadowlength,1;zoom,0.75;align,0,1
+MissLabelOnCommand=x,0;y,23;shadowlength,1;zoom,0.75;align,0,1
 
 [HoldJudgment]
 HoldJudgmentLetGoCommand=finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1;linear,0.8;zoom,0.75;sleep,0.5;linear,0.1;diffusealpha,0
