--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -63,10 +63,11 @@ MeterHeight=40
 [Combo]
 ShowComboAt=2
 
+LabelMinZoom=0.875*1
 LabelMaxZoom=0.875*1
 
-PulseCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.125*param.Zoom); self:linear(0.05); self:zoom(param.Zoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
-PulseLabelCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.075*param.LabelZoom); self:linear(0.05); self:zoom(param.LabelZoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
+PulseCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.05*param.Zoom); self:linear(0.05); self:zoom(param.Zoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
+PulseLabelCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.0125*param.LabelZoom); self:linear(0.05); self:zoom(param.LabelZoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
 NumberOnCommand=y,240-216-1.5;shadowlength,1;horizalign,right;vertalign,bottom;skewx,-0.125;
 
 ComboLabelOnCommand=x,0;y,23;shadowlength,1;zoom,0.75;align,0,1
