[cleanNoteData] Introduce 3 new metrics.
They deal with stat reporting on the editor.
Their description and default values are as follows:

DISPLAY_SIDE_STATS: Should stats show on the right? (true)
DISPLAY_NOTEDATA_STATS: Notedata stats or steps stats? (true)
UPDATE_STEPS_STATS_LIVE: Update live, or at specific times? (false)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3783,6 +3783,9 @@ PlayRecordHelpY=SCREEN_BOTTOM-20
 PlayRecordHelpOnCommand=halign,0;valign,0;shadowlength,1
 
 LoopOnChartEnd=true
+DisplaySideStats=true
+DisplayNotedataStats=true
+UpdateStepsStatsLive=false
 
 CurrentBeatFormat="%s:\n  %.3f\n"
 CurrentSecondFormat="%s:\n  %.3f\n"
@@ -3800,14 +3803,14 @@ MainTitleFormat="%s:\n  %s\n"
 SubtitleFormat="%s:\n  %s\n"
 TapNoteTypeFormat="%s: %s\n"
 SegmentTypeFormat="%s: %s\n"
-NumStepsFormat="%s: %d\n"
-NumJumpsFormat="%s: %d\n"
-NumHoldsFormat="%s: %d\n"
-NumMinesFormat="%s: %d\n"
-NumHandsFormat="%s: %d\n"
-NumRollsFormat="%s: %d\n"
-NumLiftsFormat="%s: %d\n"
-NumFakesFormat="%s: %d\n"
+NumStepsFormat="%s: %s\n"
+NumJumpsFormat="%s: %s\n"
+NumHoldsFormat="%s: %s\n"
+NumMinesFormat="%s: %s\n"
+NumHandsFormat="%s: %s\n"
+NumRollsFormat="%s: %s\n"
+NumLiftsFormat="%s: %s\n"
+NumFakesFormat="%s: %s\n"
 NumStepsFormatTwoPlayer="%s: %d/%d\n"
 NumJumpsFormatTwoPlayer="%s: %d/%d\n"
 NumHoldsFormatTwoPlayer="%s: %d/%d\n"
