Old style service menu. Sorry :^)!

--- a/Themes/test/metrics.ini
+++ b/Themes/test/metrics.ini
@@ -1,6 +1,17 @@
 [Global]
 FallbackTheme=default
 [ScreenTitleMenu]
+# new scroll for wrapping
+ScrollerTransform=function(self,offset,itemIndex,numItems) \
+	self:y((28)*(itemIndex-(numItems-1)/2)); \
+	self:x(math.floor(itemIndex/5) * 128); \
+end;
+# more choices for debug stuff
+DefaultChoice="GameStart"
+# new stuff
+ChoiceNames="GameStart,Options,Edit,Jukebox,TestClearChildren,Exit"
+# new tests
+ChoiceTestClearChildren="screen,ScreenTestClearChildren;text,Test: Clear Children"
 [ScreenGameplay]
 # LifeP1OnCommand=visible,false
 # LifeP2OnCommand=visible,false
