--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1290,8 +1290,8 @@ LineRollCombo="lua,ThemePrefRow('ComboOnRolls')"
 
 [ScreenOptionsTheme]
 Fallback="ScreenOptionsServiceChild"
-NextScreen="ScreenOptionsExtended"
-PrevScreen="ScreenOptionsExtended"
+NextScreen="ScreenOptionsService"
+PrevScreen="ScreenOptionsService"
 LineNames="gNotePos,gAuto,gScore,gSDisp,TimingDisplay,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
 LinegNotePos="lua,ThemePrefRow('NotePosition')"
 LinegScore="lua,ThemePrefRow('GameplayShowScore')"
