easier to play course, no options in oni mode

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2009,7 +2009,7 @@ OptionsListTimeout=0.25
 #
 UsePlayerSelectMenu=false
 SelectMenuScreenName="ScreenPlayerOptions"
-OptionsMenuAvailable=true
+OptionsMenuAvailable=GAMESTATE:GetPlayMode() ~= "PlayMode_Oni"
 SelectMenuAvailable=false
 ModeMenuAvailable=true
 #
