[ScreenSelectMusic] Added PlaySoundOnEnteringOptionsMenu metric (true/false).

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2014,6 +2014,7 @@ SelectMenuAvailable=false
 ModeMenuAvailable=true
 #
 ShowOptionsMessageSeconds=1.5
+PlaySoundOnEnteringOptionsMenu=true
 #
 ScreenModsCommand=setupmusicstagemods
 #
