more changes to hello world

--- a/Themes/HelloWorld/metrics.ini
+++ b/Themes/HelloWorld/metrics.ini
@@ -173,7 +173,7 @@ AllowRepeatingInput=true
 HeaderY=SCREEN_TOP+72
 
 ChoiceNames="Screens,Managers,Classes,LuaRef"
-ChoiceScreens="name,Screens"
+ChoiceScreens="name,Screens;screen,ReferenceScreens"
 ChoiceManagers="name,Managers"
 ChoiceClasses="name,Classes"
 ChoiceLuaRef="name,LuaRef;urlnoexit,http://kki.ajworld.net/lua/sm5/Lua.xml"
@@ -194,10 +194,32 @@ ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((itemIndex-(nu
 Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
 PrevScreen="ScreenReferenceMain"
+HeaderY=SCREEN_TOP+72
+
+ShowScroller=true
+LoopScroller=false
+PerChoiceScrollElement=false
+
+ScrollerX=SCREEN_CENTER_X
+ScrollerY=SCREEN_CENTER_Y+48
+ScrollerNumItemsToDraw=10
+ScrollerSecondsPerItem=0.1
+ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((itemIndex-(numItems/2))*64) end
 
 ## Screens
 [ReferenceScreens]
 Fallback="ReferenceBase"
+
+ChoiceNames="Screen,Overlays,SWME,Options"
+# screen,RefScreens-Screen
+ChoiceScreen="name,Screen"
+# screen,RefScreens-Overlays
+ChoiceOverlays="name,Overlays"
+# screen,RefScreens-ScreenWithMenuElements
+ChoiceSWME="name,SWME"
+# screen,RefScreens-ScreenOptions
+ChoiceOptions="name,Options"
+DefaultChoice="Screen"
 
 ## Managers and other Singletons
 [ReferenceManagers]
