--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -705,7 +705,9 @@ Format=FormatPercentScore
 PercentUseRemainder=false
 ApplyScoreDisplayOptions=true
 DancePointsDigits=5
-
+#
+Format="%2d"
+#
 RemainderFormat=
 #
 PercentFormat="%2d"
@@ -1201,7 +1203,7 @@ Commify=false
 
 [RollingNumbersMaxCombo]
 Fallback="RollingNumbersJudgment"
-
+[
 [ScoreDisplayNormal]
 FrameX=
 FrameY=
