better stagedisplay. needs SCREENMAN:GetTopScreen() but seems to be unable to handle it.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -584,6 +584,9 @@ TimerOffCommand=
 
 StageDisplayNumberOffset=1
 
+#
+StageDisplayUseShortString=false
+
 # This is useful 
 ArcadeOverlayX=
 ArcadeOverlayY=
@@ -1378,11 +1381,12 @@ BPMDisplayY=SCREEN_BOTTOM-17
 BPMDisplayOnCommand=draworder,101
 BPMDisplayOffCommand=bounceend,0.25;zoom,0
 #
-ShowStageDisplay=not GAMESTATE:IsCourseMode()
+ShowStageDisplay=true
 StageDisplayX=SCREEN_CENTER_X
-StageDisplayY=SCREEN_TOP+24
-StageDisplayOnCommand=zoom,0.675;
+StageDisplayY=SCREEN_BOTTOM-50
+StageDisplayOnCommand=draworder,102
 StageDisplayOffCommand=bounceend,0.25;zoom,0
+StageDisplayUseShortString=true
 #
 ShowScoreFrame=ThemePrefs.Get("GameplayFooter");
 ScoreFrameX=SCREEN_CENTER_X
